--- a/.travis.yml
+++ b/.travis.yml
@@ -11,12 +11,12 @@ script:
 
 after_success:
     - docker build -t cernel/multi-client ./client
-    - docker build -t cernel/multi-nginix ./nginix
+    - docker build -t cernel/multi-nginx ./nginx
     - docker build -t cernel/multi-server ./server
     - docker build -t cernel/multi-worker ./worker
     #Log in to the docker CLI
     - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_ID" --password-stdin
     - docker push cernel/multi-client
-    - docker push cernel/multi-nginix
+    - docker push cernel/multi-nginx
     - docker push cernel/multi-server
     - docker push cernel/multi-worker
