Commented deploy section in .travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,15 +21,15 @@ after_success:
     - docker push cernel/multi-server
     - docker push cernel/multi-worker
 
-deploy:
-    edge: true
-    provider: elasticbeanstalk
-    region: us-east-2
-    app: multi-docker
-    env: MultiDocker-env
-    bucket_name: elasticbeanstalk-us-east-2-937208802268
-    bucket_path: docker-multi
-    on: 
-        branch: master
-    access_key_id: $AWS_ACCESS_KEY
-    secret_access_key: $AWS_SECRET_KEY
+#deploy:
+#    edge: true
+#    provider: elasticbeanstalk
+#    region: us-east-2
+#    app: multi-docker
+#    env: MultiDocker-env
+#    bucket_name: elasticbeanstalk-us-east-2-937208802268
+#    bucket_path: docker-multi
+#    on: 
+#        branch: master
+#    access_key_id: $AWS_ACCESS_KEY
+#    secret_access_key: $AWS_SECRET_KEY
