--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - docker build -t cernel/react-test -f ./client/Dockerfile.dev ./client
 
 script:
-  docker run -e CI=true cernel/react-react npm run test
+  docker run -e CI=true cernel/react-test npm run test
 
 deploy:
   provider: script
